<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etBillAmount"
        android:layout_toLeftOf="@+id/etBillAmount"
        android:text="@string/enter_bill_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/bill_amount_hint"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etBillAmount"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/tip_percent_hint"
        android:inputType="numberDecimal" />
    
    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTipPercent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/zero_tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvTip"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/tvTip"
        android:text="@string/tip_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/etTipPercent"
        android:layout_toLeftOf="@id/etTipPercent"
        android:text="@string/enter_tip_percent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>